# ocr-arena

./: .dockerignore  .gitignore  .gitmodules  .secrets.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  next.config.ts  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: feature-list.md
issues/: 01-deepseek-ocr-dependency-missing.md  02-llama3-vision-gated-repo-access.md  03-deepseek-vl2-generation-mixin-and-cache-compatibility.md  04-paddleocr-llama-tokenizer-all-special-tokens-extended-attribute-error.md  05-layout-parsing-fallback-ocr-only.md  06-nemotron-ocr-v2-gpu-memory-oom-failure.md  07-deepseek-ocr-2-oom-device-mismatch.md  08-qwen3-vl-gemma-4-incorrect-model-and-missing-cache.md  (+1 more)
ocr-engines/: .dockerignore  Dockerfile  pyproject.toml
ocr-engines/chandra-ocr-2/: serve.py  serve.sh
ocr-engines/deepseek-ocr-2/: serve.py  serve.sh
ocr-engines/deepseek-vl2/: serve.py  serve.sh
ocr-engines/dots-ocr/: serve.py  serve.sh
ocr-engines/gemma-4/: serve.py  serve.sh
ocr-engines/generic-ocr-engine/: serve.py  serve.sh
ocr-engines/glm-ocr/: serve.py  serve.sh
ocr-engines/lighton-ocr-2-1b/: serve.py  serve.sh
ocr-engines/litparse/: serve.py  serve.sh
ocr-engines/llama3-vision/: serve.sh  serve_mock.py
ocr-engines/mineru-diffusion/: serve.py  serve.sh
ocr-engines/nvidia-nemotron-ocr-v2/: serve.sh  serve_nemotron.py
ocr-engines/paddle-ocr-vl-1-6-v2/: pipeline_config_vllm.yaml  serve-pipeline.sh  serve.py  serve.sh  vllm_config.yaml
ocr-engines/qwen3-vl/: serve.py  serve.sh
tests/: __init__.py  (+7 more)
(+82 files in other folders)
